# Rentsoft

./: .env.example  .gitignore  .pylintrc  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
_rentsoft_app/: README.md
apps/advertisements/: models.py  serializers.py  urls.py  views.py
apps/advertisements/migrations/: 0001_initial.py  0002_advertisementphotomodel.py  0002_initial.py  0003_advertisementmodel_mileage.py  0004_alter_advertisementmodel_vin_alter_statusmodel_name.py  0005_alter_advertisementmodel_engine.py
apps/advertisements/swagger/: decorators.py  serializers.py
apps/auth/: urls.py  views.py
apps/auth/swagger/: decorators.py
apps/bookings/: models.py  serializers.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_alter_bookingmodel_options.py  0003_bookingmodel_is_active.py
apps/diia/: apps.py  urls.py  views.py
apps/users/: filters.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_password.py
apps/users/swagger/: decorators.py
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  rest_conf.py
configs/middleware/: query_stats.py
core/: permissions.py
core/dataclasses/: advertisement_dataclasses.py  user_dataclasses.py
core/management/commands/: create_default_superuser.py  seed_initial_data.py  wait_db.py
core/services/: upload_user_photo_service.py
core/services/diia_api/: branch.py  diia_variables.py  offer.py  session_token.py
